<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stats"
    tools:context=".controller.MainActivity"
    style="@style/stats">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statsDisplay"
        android:layout_width="410dp"
        android:layout_height="226dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109">


        <LinearLayout
            android:id="@+id/playerStatsLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/playerStatsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerStatsLabel" />

            <TextView
                android:id="@+id/playerStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/enemyStatsLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.649"
            app:layout_constraintStart_toEndOf="@+id/playerStatsLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/enemyStatsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enemyStatsLabel" />

            <TextView
                android:id="@+id/enemyStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/magicAttackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magicAttackButtonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsDisplay"
        app:layout_constraintVertical_bias="0.431" />

    <Button
        android:id="@+id/physicalAttackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/physicalAttackButtonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toEndOf="@+id/magicAttackButton"
        app:layout_constraintTop_toBottomOf="@+id/statsDisplay"
        app:layout_constraintVertical_bias="0.431" />

</androidx.constraintlayout.widget.ConstraintLayout>