<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/VictoryConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SeeTutorialFragment" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/seeTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorialPlaceholder"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.08" />

            <Button
                android:id="@+id/statTutorialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statTutorialLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seeTutorial"
                app:layout_constraintVertical_bias="0.228" />

            <Button
                android:id="@+id/combatTutorialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fightTutorialLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statTutorialButton"
                app:layout_constraintVertical_bias="0.186" />

            <Button
                android:id="@+id/upgradeTutorialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upgradeTutorialLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/combatTutorialButton"
                app:layout_constraintVertical_bias="0.261" />

            <Button
                android:id="@+id/skipTutorialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upgradeTutorialButton"
                app:layout_constraintVertical_bias="0.443" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>