...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tutorial"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/tutorialPlaceholder"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tutorial"
                app:layout_constraintVertical_bias="0.366"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/tutorialContinueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cont"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.867"
...
