...
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/defaultStats"
                android:textSize="13.5sp" />

            <Button
                android:id="@+id/defaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defaultOptionLabel" />
        </LinearLayout>

        <LinearLayout
...
